--- a/examples.html
+++ b/examples.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="SnapFoo - SVG Animation Library"/>
     <meta property="og:description"
           content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process."/>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/css/main.min.css">
     <script src="lib/js/jquery1.11.2.min.js"></script>
@@ -29,13 +30,13 @@
             <div class="col-md-6">
                 <div class="header-button-container">
                     <div class="button">
-                        <a href="#" title="SnapFoo on GitHub">GitHub</a>
+                        <a href="https://github.com/yuschick/SnapFoo/" title="SnapFoo on GitHub">GitHub</a>
                     </div>
                     <div class="button">
-                        <a href="#" title="SnapFoo Examples">Examples</a>
+                        <a href="http://yuschick.github.io/SnapFoo/examples.html" title="SnapFoo Examples">Examples</a>
                     </div>
                     <div class="button">
-                        <a href="#" title="SnapFoo Examples">Docs</a>
+                        <a href="http://yuschick.github.io/SnapFoo/" title="SnapFoo Examples">Docs</a>
                     </div>
                 </div>
             </div>
@@ -294,13 +295,13 @@ snapfooPathGroup.animatePath("circle", "#group-path", 2500, theOptions);</code><
 
             <div class="footer-button-container">
                 <div class="button">
-                    <a href="#" title="SnapFoo on GitHub">GitHub</a>
+                    <a href="https://github.com/yuschick/SnapFoo/" title="SnapFoo on GitHub">GitHub</a>
                 </div>
                 <div class="button">
-                    <a href="#" title="SnapFoo Examples">Examples</a>
+                    <a href="http://yuschick.github.io/SnapFoo/examples.html" title="SnapFoo Examples">Examples</a>
                 </div>
                 <div class="button">
-                    <a href="#" title="SnapFoo Examples">Docs</a>
+                    <a href="http://yuschick.github.io/SnapFoo/" title="SnapFoo Examples">Docs</a>
                 </div>
             </div>
         </div>
