Updating home link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="row">
         <div class="container">
             <div class="col-md-6">
-                <a href="/" title="SnapFoo - Home"><img src="lib/img/snapfoo-logo.png" class="the-logo" alt="SnapFoo - SVG Animation Library"/></a>
+                <a href="/SnapFoo/" title="SnapFoo - Home"><img src="lib/img/snapfoo-logo.png" class="the-logo" alt="SnapFoo - SVG Animation Library"/></a>
             </div>
 
             <div class="col-md-6">
