--- a/examples.html
+++ b/examples.html
@@ -23,7 +23,7 @@
     <header class="row">
         <div class="container">
             <div class="col-md-6">
-                <a href="/" title="SnapFoo - Home"><img src="lib/img/snapfoo-logo.png" class="the-logo"
+                <a href="/SnapFoo/" title="SnapFoo - Home"><img src="lib/img/snapfoo-logo.png" class="the-logo"
                                                         alt="SnapFoo - SVG Animation Library"/></a>
             </div>
 
