Adding the banner to the examples page.

--- a/examples.html
+++ b/examples.html
@@ -23,8 +23,7 @@
     <header class="row">
         <div class="container">
             <div class="col-md-6">
-                <a href="/SnapFoo/" title="SnapFoo - Home"><img src="lib/img/snapfoo-logo.png" class="the-logo"
-                                                        alt="SnapFoo - SVG Animation Library"/></a>
+                <a href="/SnapFoo/" title="SnapFoo - Home"><img src="lib/img/snapfoo-logo.png" class="the-logo" alt="SnapFoo - SVG Animation Library"/></a>
             </div>
 
             <div class="col-md-6">
@@ -42,6 +41,19 @@
             </div>
         </div>
     </header>
+    <section class="row banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 text-container">
+                    <h1>SnapFoo</h1>
+                    <p>SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process.</p>
+                </div>
+                <div class="col-md-5 hiya-container">
+                    <img src="lib/img/SnapFoo-logo-kick.png" alt="SnapFoo - SVG Animation Library" class="hiya"/>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="row content docs">
         <div class="col-md-12 section-header">
             <div class="container">
