--- a/examples.html
+++ b/examples.html
@@ -6,11 +6,10 @@
           content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process."/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="SnapFoo - SVG Animation Library">
-    <meta itemprop="description"
-          content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process.">
+    <meta itemprop="description" content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process.">
     <meta property="og:title" content="SnapFoo - SVG Animation Library"/>
-    <meta property="og:description"
-          content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process."/>
+    <meta property="og:description" content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process."/>
+    <meta property="og:image" content="src/img/snapfoo-share.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/css/main.min.css">
