Minor share tweak

--- a/examples.html
+++ b/examples.html
@@ -9,7 +9,7 @@
     <meta itemprop="description" content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process.">
     <meta property="og:title" content="SnapFoo - SVG Animation Library"/>
     <meta property="og:description" content="SnapFoo is an open source JavaScript library that extends off of SnapSVG to help simplify the SVG animation process."/>
-    <meta property="og:image" content="src/img/snapfoo-share.jpg"/>
+    <meta property="og:image" content="http://yuschick.github.io/SnapFoo/src/img/snapfoo-share.jpg"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/css/main.min.css">
