--- a/examples.html
+++ b/examples.html
@@ -76,39 +76,39 @@
                     </div>
                     <div class="col-md-9 docs-details">
                         <section id="examples-animate-group-path" class="docs-section">
-                            <p data-height="288" data-theme-id="20882" data-slug-hash="ZbzPeP" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/ZbzPeP/">SnapFoo v2 Demo - Loop a Group of Elements Along a Path</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="ZbzPeP" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/ZbzPeP/">SnapFoo v2 Demo - Loop a Group of Elements Along a Path</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-animate-demo" class="docs-section">
-                            <p data-height="555" data-theme-id="20882" data-slug-hash="reQBQP" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/reQBQP/">SnapFoo v2 Demo</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="reQBQP" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/reQBQP/">SnapFoo v2 Demo</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-loop-path" class="docs-section">
-                            <p data-height="523" data-theme-id="20882" data-slug-hash="yOQBwx" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/yOQBwx/">SnapFoo v2 Demo - Looping Along Paths</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="yOQBwx" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/yOQBwx/">SnapFoo v2 Demo - Looping Along Paths</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-loop-path-rewind" class="docs-section">
-                            <p data-height="541" data-theme-id="20882" data-slug-hash="VaVZOa" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/VaVZOa/">SnapFoo v2 Demo - Looping Along a Path with Rewind</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="VaVZOa" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/VaVZOa/">SnapFoo v2 Demo - Looping Along a Path with Rewind</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-callbackat-end" class="docs-section">
-                            <p data-height="300" data-theme-id="20882" data-slug-hash="RaqwbK" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/RaqwbK/">SnapFoo v2 - CallbackAt Demo (End)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="RaqwbK" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/RaqwbK/">SnapFoo v2 - CallbackAt Demo (End)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-callbackat-child-end" class="docs-section">
-                            <p data-height="300" data-theme-id="20882" data-slug-hash="KzrKPx" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/KzrKPx/">SnapFoo v2 - CallbackAt Demo (Child End)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="KzrKPx" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/KzrKPx/">SnapFoo v2 - CallbackAt Demo (Child End)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-callbackat-child" class="docs-section">
-                            <p data-height="300" data-theme-id="20882" data-slug-hash="qZQWed" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/qZQWed/">SnapFoo v2 - CallbackAt Demo (Child)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="qZQWed" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/qZQWed/">SnapFoo v2 - CallbackAt Demo (Child)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-callbackat-loop" class="docs-section">
-                            <p data-height="300" data-theme-id="20882" data-slug-hash="NNEWWY" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/NNEWWY/">SnapFoo v2 - CallbackAt Demo (Loop)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="NNEWWY" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/NNEWWY/">SnapFoo v2 - CallbackAt Demo (Loop)</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                         <section id="examples-reset" class="docs-section">
-                            <p data-height="300" data-theme-id="20882" data-slug-hash="KzrKwG" data-default-tab="result" data-user="Yuschick" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/KzrKwG/">SnapFoo v2 - Reset Demo</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                            <p data-height="600" data-theme-id="20882" data-slug-hash="KzrKwG" data-default-tab="result" data-user="Yuschick" data-preview="true" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/Yuschick/pen/KzrKwG/">SnapFoo v2 - Reset Demo</a> by Daniel Yuschick (<a href="http://codepen.io/Yuschick">@Yuschick</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
                         </section>
                     </div>
