further progress on site build

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <meta name="twitter:title" content="Snapfoo - SVG Animation Library">
   <meta name="twitter:description" content="xxx">
   <meta name="twitter:image" content="http://yuschick.github.io/snapfoo/screenshot.jpg">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Hind" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>Snapfoo - SVG Animation Library</title>
